--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm i -g @angular/cli
+    - run: cd g-now
     - run: ng deploy --base-href=/weather/
     
