--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm i -g @angular/cli
-    - run: cd ./g-now/
+    - run: cd ./g-now/g-now
     - run: pwd
     - run: ls
     - run: ng deploy --base-href=/weather/
